# Customer_churn_risk_analysis

./: README.md
final_project/: README.md  pyproject.toml
final_project/data/processed/: enterprise_intelligence.db
final_project/ingestion/: ingest_to_sqlite.py
final_project/langchain_layer/chains/: customer_chain.py  finance_chain.py
final_project/langchain_layer/intent/: intent_chain.py
final_project/llm/: groq_llm.py
