[project]
name = "final-project"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "altair<5",
    "dotenv>=0.9.9",
    "langchain>=1.2.8",
    "langchain-agent>=0.1.1",
    "langchain-community>=0.4.1",
    "langchain-core>=1.2.9",
    "langchain-groq>=1.1.2",
    "langchain-openai>=1.1.7",
    "langgraph>=1.0.7",
    "pandas>=3.0.0",
    "streamlit>=1.19.0",
]
